# ChangeLog for net-misc/ices
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/ices/ChangeLog,v 1.14 2004/08/27 03:00:59 tgall Exp $

  26 Aug 2004; Tom Gall <tgall@gentoo.org> ices-2.0.0.ebuild:
  stable on ppc64, bug #58552

  15 May 2004; Jason Wever <weeve@gentoo.org> ices-2.0.0.ebuild:
  Stable on sparc.

  22 Apr 2004; Dylan Carlson <absinthe@gentoo.org> ices-2.0.0.ebuild:
  Marked stable for amd64.

  08 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> ices-2.0.0.ebuild:
  Stable x86.

  07 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> ices-2.0.0.ebuild,
  ices-2.0_beta4.ebuild:
  2.0 requires ogg now.  Bug #47034.

  26 Mar 2004; Jeremy Huddleston <eradicator@gentoo.org> ices-0.2.3.ebuild:
  Made aliz's QA script happy.

*ices-2.0.0 (16 Mar 2004)

  16 Mar 2004; Dylan Carlson <absinthe@gentoo.org> ices-2.0.0.ebuild:
  Version bump. Added ~amd64 to KEYWORDS.

*ices-2.0_beta4 (21 Jan 2004)

  21 Jan 2004; Nick Hadaway <raker@gentoo.org> ices-2.0_beta4.ebuild:
  Version bump.  Almost ready for primetime. :)  The python and perl
  modules are now separate packages.  Those ebuilds will be coming
  shortly.

*ices-0.3 (15 Aug 2003)

  15 Aug 2003; Nick Hadaway <raker@gentoo.org> ices-0.3.ebuild:
  Version bump.  Should now support bigendian platforms.  Finally added
  the python module support.  Removed the dependancy on icecast and 
  added depends on libxml2 and >=libshout-2.0.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*ices-0.2.3 (25 Jul 2002)

  25 Jul 2002; Nick Hadaway <raker@gentoo.org>
  ices-0.2.3.ebuild, files/digest-ices-0.2.3, files/docdir.diff:
  Initial adding of ebuild to portage.  Leaving masked until I know the
  status of the shared python library.