@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/ices
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/ices/ChangeLog,v 1.14 2004/08/27 03:00:59 tgall Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/ices/ChangeLog,v 1.15 2004/08/30 03:18:34 pyrania Exp $
+
+*ices-0.4 (30 Aug 2004)
+
+  30 Aug 2004; <pyrania@gentoo.org> +ices-0.4.ebuild:
+  Version bump.
 
   26 Aug 2004; Tom Gall <tgall@gentoo.org> ices-2.0.0.ebuild:
   stable on ppc64, bug #58552
